package com.groupjn.productservice.query;

public class GetProductQuery {
}
