@startuml

title __PRODUCT-SERVICE's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace Builder {
        class com.groupjn.productservice.Builder.CategoryBuilder {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace Builder {
        class com.groupjn.productservice.Builder.CategoryClass {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      class com.groupjn.productservice.ProductServiceApplication {
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace controller {
        class com.groupjn.productservice.controller.ProductCategoryController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace controller {
        class com.groupjn.productservice.controller.ProductController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace entity {
        class com.groupjn.productservice.entity.ProductSummary {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace model {
        class com.groupjn.productservice.model.Category {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace model {
        class com.groupjn.productservice.model.Product {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace query {
        class com.groupjn.productservice.query.GetProductQuery {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace query {
        class com.groupjn.productservice.query.ProductProjector {
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.productservice {
      namespace repository {
        interface com.groupjn.productservice.repository.CategoryRepository {
        }
      }
    }
  }
  

  com.groupjn.productservice.controller.ProductCategoryController o-- com.groupjn.productservice.repository.CategoryRepository : categoryRepository
  com.groupjn.productservice.query.ProductProjector o-- com.groupjn.productservice.query.ProductSummaryRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
